...
    <string name="navigation_drawer_home">Home</string>
    <string name="navigation_drawer_icon">Drawer element icon</string>

    <!-- ACTIONS -->
    <string name="action_settings">Settings</string>
    <string name="action_credits">Credits</string>
    <string name="action_save">Save</string>
    <string name="action_search">Search</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="set_as_completed_notice">Set as completed</string>
    <string name="set_as_done_movie">I\'ve watched this</string>
    <string name="set_as_done_book">I\'ve read this</string>
    <string name="set_as_done_videogame">I\'ve played this</string>
    <string name="set_as_done_tv_show">I\'ve completed this</string>
    <string name="set_as_doing_movie">I\'m watching this</string>
    <string name="set_as_doing_videogame">I\'m playing this</string>
    <string name="set_as_doing_book">I\'m reading this</string>
    <string name="set_as_doing_tv_show">I\'m following this</string>
    <string name="redo_movie">I could rewatch this</string>
    <string name="redo_tv_show">I could rewatch this</string>
    <string name="redo_videogame">I could replay this</string>
    <string name="redo_book">I could reread this</string>
    <string name="undo">Undo</string>
    <string name="set_as_owned">I now own this</string>
    <string name="change_completion_date">Change completion date</string>

    <!-- ACTIONS CONFIRM MESSAGES -->
    <string name="delete_category_confirm_message">Are you sure? This will also delete all tracked/completed media items in this category!</string>
    <string name="delete_media_item_confirm_message">Are you sure? This action cannot be undone!</string>

    <!-- CATEGORIES AND SUBCATEGORIES -->
    <string name="category">Category</string>
    <string name="subcategory_completed">Completed</string>
    <string name="subcategory_suggestions">Suggestions</string>

...
    <string name="books">Books</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="videogames">Videogames</string>

    <!-- MEDIA ITEM STATUS -->
    <string name="upcoming">Upcoming</string>
    <string name="doing_now_movie">Watching</string>
    <string name="doing_now_tv_show">Following</string>
    <string name="doing_now_videogame">Playing</string>
    <string name="doing_now_book">Reading</string>

    <!-- MEDIA ITEM IMPORTANCE LEVELS -->
    <string name="importance_level_none">Unimportant</string>
...
    <string name="validation_media_item_same_title_tracking">You are already tracking a media item with the same name</string>

    <!-- HOME -->
    <string name="home_empty">No categories</string>

    <!-- FORMS -->
    <string name="form_exit_error">Are you sure you want to discard your changes?</string>
    <string name="form_exit_error_discard">Discard</string>
    <string name="form_exit_error_keep">Keep editing</string>

    <!-- CATEGORIES FORM -->
    <string name="form_title_category_name">Name</string>
    <string name="form_title_color">Color</string>
    <string name="form_color_picker_title">Choose Color</string>
    <string name="form_media_type_select_title">Choose Media</string>
...
