...
            android:layout_height="match_parent"
            android:padding="0dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <!-- RECYCLER VIEW FOR MEDIA ITEMS LIST -->
            <android.support.v7.widget.RecyclerView
                android:id="@+id/media_items_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/list_padding_bottom"
                android:clipToPadding="false"/>

            <!-- TEXT IF LIST IS EMPTY -->
...
        </RelativeLayout>

    </LinearLayout>

    <!-- FAB -->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/items_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_add"
        android:tint="@android:color/white"/>
...
