<?xml version="1.0" encoding="utf-8"?>

<!--
 -   CONTENT FOR THE FORM FRAGMENT
 -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- APP BAR -->
    <include layout="@layout/app_bar"/>

    <!-- ALLOW SCROLLING -->
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- ACTUAL FORM CONTENT (inflated by Java) -->
        <LinearLayout
            android:id="@+id/form_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

    </ScrollView>

</LinearLayout>

